<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PostEditFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/top_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/descr_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/dropdown_menu"
        app:layout_constraintStart_toEndOf="@id/top_avatar"
        app:layout_constraintTop_toTopOf="@id/top_avatar"
        tools:text="Имя автора поста" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/top_avatar"
        app:layout_constraintStart_toEndOf="@id/top_avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="12.05.2022 " />

    <ImageButton
        android:id="@+id/dropdown_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descr_menu"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/author"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contentPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video"

        tools:text="@tools:sample/lorem" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author,top_avatar,published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageButtonFavorit"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        android:contentDescription="@string/favorit_button"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentPost"
        tools:text="512" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageButtonShare"
        style="@style/Widget.AppTheme.PostIconBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/foot_vert_spacing"
        android:contentDescription="@string/button_share"
        android:minWidth="48dp"
        android:minHeight="48dp"

        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@id/imageButtonFavorit"
        app:layout_constraintTop_toBottomOf="@id/contentPost"
        tools:text="678" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageEye"
        style="@style/Widget.AppTheme.PostIconBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/foot_horiz_spacing"
        android:contentDescription="@string/eye_icon_image"
        android:enabled="false"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonShare"
        tools:text="678" />

    <FrameLayout
        android:id="@+id/video"
        android:layout_width="@dimen/width_video_pic"
        android:layout_height="@dimen/height_video_pic"
        android:background="@mipmap/video"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        app:layout_constraintBottom_toTopOf="@id/contentPost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    </FrameLayout>
    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/play_small"
        android:contentDescription="Editing post"
        app:layout_constraintEnd_toEndOf="@id/video"
        app:layout_constraintStart_toStartOf="@id/video"
        app:layout_constraintTop_toTopOf="@id/video"
        app:layout_constraintBottom_toBottomOf="@id/video"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="video,playButton"
        android:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>